objects/DecsOnD__Invocation_Record__c.object
<CustomObject>
    <fields>
        <fullName>DecsOnD__Apex_Job_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id of CronTrigger, AsyncApexJob, Queueable, etc</description>
        <externalId>true</externalId>
        <label>Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DecsOnD__Complete_DateTime__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Failures__c</fullName>
        <label>Failures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Invocation_Configuration_Id__c</fullName>
        <description>Relationship to Invocation Configuration custom metadata record. Used to infer object type, etc.</description>
        <externalId>true</externalId>
        <label>Invocation Configuration Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__No_Actions__c</fullName>
        <description>How many records didn&apos;t have any actions and therefore were not processed</description>
        <inlineHelpText>How many records didn&apos;t have any actions and therefore were not processed</inlineHelpText>
        <label>No Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Object_Type__c</fullName>
        <formula>DecsOnD__Policy__r.DecsOnD__Applies_to__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Params__c</fullName>
        <description>Used to store various data points about invocation in a JSON format.</description>
        <label>Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Policy__c</fullName>
        <label>Policy</label>
        <referenceTo>DecsOnD__Policy__c</referenceTo>
        <relationshipLabel>Invocation Records</relationshipLabel>
        <relationshipName>Invocation_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Result__c</fullName>
        <formula>&quot;Success: &quot; + text(DecsOnD__Success__c) + br() +
&quot;No Actions: &quot; + text(DecsOnD__No_Actions__c) + br() +
&quot;Failures: &quot; + text(DecsOnD__Failures__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Seconds_Since_Last_Modified__c</fullName>
        <formula>(NOW()-LastModifiedDate)*1440*60</formula>
        <label>Seconds Since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Start_DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Status__c</fullName>
        <description>Used to represent at what state invocation record is.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Success__c</fullName>
        <label>Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Type__c</fullName>
        <description>Type of invcation, for example batch, scheduled, periodic, custom button, API, etc.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trigger</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                </value>
                <value>
                    <fullName>Queueable</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Interactive</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Version_Label__c</fullName>
        <description>Label of the business policy version applied</description>
        <label>Policy Version Label</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Version_Number__c</fullName>
        <description>Sequence number of the business policy version</description>
        <label>Policy Version Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Invocation Record</label>
    <listViews>
        <fullName>DecsOnD__All</fullName>
        <columns>NAME</columns>
        <columns>DecsOnD__Object_Type__c</columns>
        <columns>DecsOnD__Policy__c</columns>
        <columns>DecsOnD__Type__c</columns>
        <columns>DecsOnD__Status__c</columns>
        <columns>DecsOnD__Success__c</columns>
        <columns>DecsOnD__No_Actions__c</columns>
        <columns>DecsOnD__Failures__c</columns>
        <columns>DecsOnD__Start_DateTime__c</columns>
        <columns>DecsOnD__Complete_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>Invocation Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invocation Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DecsOnD__Prevent_changing_status</fullName>
        <active>true</active>
        <description>Used to stop Batch jobs - a race condition occurs and batch manages to log last execution entry.</description>
        <errorConditionFormula>(ISPICKVAL(PRIORVALUE(DecsOnD__Status__c	),&quot;Aborted&quot;) || 
ISPICKVAL(PRIORVALUE(DecsOnD__Status__c	),&quot;Completed&quot;) || 
ISPICKVAL(PRIORVALUE(DecsOnD__Status__c	),&quot;Finished&quot;))
&amp;&amp; ISPICKVAL(DecsOnD__Type__c, &quot;Scheduled-Batch&quot;)</errorConditionFormula>
        <errorMessage>Cannot change status once reached final status</errorMessage>
    </validationRules>
</CustomObject>